# hermes-notify

./: LICENSE  README.md  pyproject.toml
scripts/: install.sh
src/hermes_notify/: __init__.py  cli.py  config.py  installer.py  overlay.py
src/hermes_notify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
